[tool.poetry]
name = "miraie-ac-in"
version = "1.0.6"
description = "MirAIe-AC API for Python — actively maintained fork of miraie-ac"
authors = ["Raj Kishore <40551183+rkzofficial@users.noreply.github.com>", "Ali Jafri <deCodeIt@users.noreply.github.com>", "Harith <82406332+gutpull@users.noreply.github.com>", "Selva <57052370+selvakk2k@users.noreply.github.com>"]
maintainers = ["Selva <57052370+selvakk2k@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "miraie_ac"}]

[tool.poetry.dependencies]
python = "^3.8"
aiomqtt = "^2.0.1"
aiohttp= "*"
certifi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
